--- a/Immoc_business/app/src/main/res/layout/activity_home.xml
+++ b/Immoc_business/app/src/main/res/layout/activity_home.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.drawerlayout.widget.DrawerLayout
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
-    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white">
@@ -37,24 +37,19 @@
                 android:layout_centerVertical="true"
                 android:background="@mipmap/b_p" />
 
-<!--            <net.lucode.hackware.magicindicator.MagicIndicator-->
-<!--                android:id="@+id/magic_indicator"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_centerHorizontal="true"-->
-<!--                android:layout_centerVertical="true"-->
-<!--                android:layout_marginStart="42dp"-->
-<!--                android:layout_marginEnd="42dp"-->
-<!--                android:layout_toStartOf="@id/search_view"-->
-<!--                android:layout_toEndOf="@id/toggle_view" />-->
+            <net.lucode.hackware.magicindicator.MagicIndicator
+                android:id="@+id/magic_indicator"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:layout_marginStart="42dp"
+                android:layout_marginEnd="42dp"
+                android:layout_toStartOf="@id/search_view"
+                android:layout_toEndOf="@id/toggle_view"
+                tools:ignore="MissingClass" />
 
         </RelativeLayout>
-
-<!--        <com.imooc.lib_audio.mediaplayer.view.BottomMusicView-->
-<!--            android:id="@+id/bottom_view"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_alignParentBottom="true" />-->
 
         <androidx.viewpager.widget.ViewPager
             android:id="@+id/view_pager"
@@ -67,6 +62,14 @@
     <!-- 存放侧滑菜单 -->
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></RelativeLayout>
+        android:layout_height="match_parent">
+
+        <androidx.core.widget.NestedScrollView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        </androidx.core.widget.NestedScrollView>
+
+    </RelativeLayout>
 
 </androidx.drawerlayout.widget.DrawerLayout>
